--- a/spellnote.html
+++ b/spellnote.html
@@ -2,21 +2,22 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 		<link type="text/css" rel="stylesheet" href="spellnote.css" />
 	</head>
 	<body>
 		<div>12323</div>
-		<div class="spellnote1" style="width: 600px;"></div>
-		<div class="spellnote2" style="width: 600px;"></div>
+		<div class="spellnote1" style="max-width: 600px;"></div>
+		<div class="spellnote2" style="max-width: 600px;"></div>
 		<script src="./jquery-3.0.0.js"></script>
 		<script src="./spellnote.js"></script>
 		<script>
 			$('.spellnote1').spellnote('init', {
 				units : [['undo', 'redo'], ['bold', 'italic', 'underline', 'strikeThrough'], 'fontSize', 'code', 'test'],
 			});
-			// $('.spellnote2').spellnote('init', {
-				// units : [['undo', 'redo'], ['bold', 'italic', 'underline', 'strikeThrough'], 'fontSize', 'code', 'test'],
-			// });
+			$('.spellnote2').spellnote('init', {
+				units : [['undo', 'redo'], ['bold', 'italic', 'underline', 'strikeThrough'], 'fontSize', 'code'],
+			});
 		</script>
 	</body>
 </html>
