开始写模态框

--- a/spellnote.html
+++ b/spellnote.html
@@ -13,7 +13,7 @@
 		<script src="./spellnote.js"></script>
 		<script>
 			$('.spellnote1').spellnote('init', {
-				units : [['undo', 'redo'], ['bold', 'italic', 'underline', 'strikeThrough'], 'fontSize', 'code', 'test'],
+				units : [['undo', 'redo'], ['bold', 'italic', 'underline', 'strikeThrough'], ['foreColor', 'backColor'], 'fontSize', 'removeFormat', 'code', 'test'],
 			});
 			$('.spellnote2').spellnote('init', {
 				units : [['undo', 'redo'], ['bold', 'italic', 'underline', 'strikeThrough'], 'fontSize', 'code'],
