音乐插入完成 但insertHtml方法chrome无效，问题待解

--- a/spellnote.html
+++ b/spellnote.html
@@ -13,11 +13,11 @@
 		<script src="./spellnote.js"></script>
 		<script>
 			$('.spellnote1').spellnote('init', {
-				units : [['undo', 'redo'], ['bold', 'italic', 'underline', 'strikeThrough'], ['foreColor', 'backColor'], 'fontSize', 'removeFormat', 'code', 'test'],
+				units : [['undo', 'redo'], ['bold', 'italic', 'underline', 'strikeThrough'], ['foreColor', 'backColor'], 'fontSize', 'removeFormat', ['music', 'video'], 'code', 'test'],
 			});
-			$('.spellnote2').spellnote('init', {
-				units : [['undo', 'redo'], ['bold', 'italic', 'underline', 'strikeThrough'], 'fontSize', 'code'],
-			});
+			// $('.spellnote2').spellnote('init', {
+			// 	units : [['undo', 'redo'], ['bold', 'italic', 'underline', 'strikeThrough'], 'fontSize', 'code'],
+			// });
 		</script>
 	</body>
 </html>
