将div按钮改回button前

--- a/spellnote.html
+++ b/spellnote.html
@@ -17,6 +17,7 @@
 	<script>
 		$('.spellnote1').spellnote('init', {
 			cleanHtmlOnPaste: true,
+			unitsTracing: true,
 			units: [['undo', 'redo'], ['bold', 'italic', 'underline', 'strikeThrough'], ['fontSize', 'foreColor', 'backColor'],['alignLeft', 'alignCenter', 'alignRight'], 'removeFormat', ['image', 'music', 'video'], ['link', 'unlink'], 'code', 'about'],
 			callback: {
 				onImageUpload: function(file){
